@@ -1,5 +1,6 @@
 2006-01-11:
 	* src/session.c: no, I did touch that file last year.
+	* src/pam_krb5.5.in: document the "ignore_afs" option.
 
 2005-12-19:
 	* src/items.c: include <stdio.h> to get the definition of NULL (Jesse
